trip-currency-local-gitops/k8s/overlays/eks/network-policies/03-currency.yaml
# service-currency:
#   Ingress: ALB(VPC CIDR)에서 8000 포트
#   Egress:  Aurora(3306), DocumentDB(27017), Redis(6379) → VPC CIDR
#            Kafka(9092) → pod selector
#            외부 HTTPS(443) → 환율 외부 API 호출 허용
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-currency
  namespace: trip-service-prod
spec:
  podSelector:
    matchLabels:
      app: service-currency
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - ipBlock:
        cidr: 192.168.0.0/16
    ports:
    - protocol: TCP
      port: 8000
  egress:
  - to:
    - ipBlock:
        cidr: 192.168.0.0/16
    ports:
    - protocol: TCP
      port: 3306
    - protocol: TCP
      port: 27017
    - protocol: TCP
      port: 6379
  - to:
    - podSelector:
        matchLabels:
          app: kafka
    ports:
    - protocol: TCP
      port: 9092
  - to:
    - ipBlock:
        cidr: 0.0.0.0/0
        except:
        - 192.168.0.0/16
        - 10.0.0.0/8
        - 172.16.0.0/12
    ports:
    - protocol: TCP
      port: 443
